--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,26 @@
+body {
+  background-color: #eaf6f6;
+}
+form {
+  padding: 25px;
+  margin: 0 auto;
+}
+h1 {
+  color: #155263;
+  border: 2px solid #d9dad7;
+  border-radius: 8px;
+  font-weight: bold;
+  font-size: 30px;
+  margin: 20px;
+  padding: 10px;
+}
+h2 {
+  text-align: center;
+  font-weight: bold;
+  color: #155263;
+}
 .container {
-  border: 8px solid #155263;
+  border: 3px solid #155263;
   width: 70%;
   border-radius: 8px;
   padding: 10px;
@@ -9,15 +30,15 @@
   font-family: "Poppins", sans-serif;
   background-color: #ffff;
   max-width: 700px;
-  min-width: 550px;
+  min-width: 425px;
 }
 .search-bar {
   margin: 0 auto;
   display: 0 block;
   text-align: center;
 }
-.current-location {
-  font-size: 30px;
+.todays-conditions {
+  font-size: 15px;
   padding: 10px;
   position: relative;
   top: -7px;
@@ -28,7 +49,7 @@
   margin: 10px;
 }
 .main-weather-icon {
-  font-size: 250px;
+  font-size: 200px;
   color: #ff9a3c;
 }
 .lastUpdated {
@@ -36,6 +57,7 @@
 }
 .fiveDayForcast {
   margin: 40px;
+  font-size: 15px;
 }
 .sun-icon {
   color: #ff9a3c;
@@ -54,24 +76,9 @@
   font-size: 12px;
   text-align: center;
 }
-body {
-  background-color: #bbe9db;
+.units {
+  font-size: 20px;
 }
-form {
-  padding: 25px;
-  margin: 0 auto;
-}
-h1 {
-  color: #155263;
-  border: 2px solid #d9dad7;
-  border-radius: 8px;
-  font-weight: bold;
-  font-size: 40px;
-  margin: 20px;
-  padding: 10px;
-}
-h2 {
-  text-align: center;
-  font-weight: bold;
-  color: #155263;
+#current-temperature {
+  font-size: 20px;
 }
