Correct forecast spelling

--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,7 @@ h2 {
 .lastUpdated {
   font-size: 8px;
 }
-.fiveDayForcast {
+.fiveDayForecast {
   margin: 20px;
   font-size: 15px;
   text-align: center;
