--- a/src/style.css
+++ b/src/style.css
@@ -51,17 +51,18 @@ h2 {
 }
 .lastUpdated {
   font-size: 8px;
+  text-align: center;
 }
 .fiveDayForecast {
   margin: 20px auto;
   display: block;
-  font-size: 15px;
+  font-size: 12px;
   text-align: center;
   color: #155263;
 }
 .sign-off {
   color: #155263;
-  font-size: 12px;
+  font-size: 10px;
   text-align: center;
 }
 .units {
@@ -82,6 +83,7 @@ h2 {
 }
 #main-weather-icon {
   display: flex;
+  margin: 0 auto;
   align-items: center;
   justify-content: center;
 }
